--- a/PlannerApp/app.json
+++ b/PlannerApp/app.json
@@ -28,6 +28,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": ""
+    "description": "bottom navigation bar with custom add button"
   }
 }
